--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,27 @@
   }
 }
 
+button{
+  margin: 15px;
+  margin-top: 25px;
+  padding: 15px 20px;
+  font-size: 1.2rem;
+  background-color: #00ead3;
+  border: 1px solid #2940d3;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+button:active{
+  transform: scale(1.1);
+}
+
+.disabled{
+    cursor: not-allowed;
+    pointer-events: none;
+  
+    /*Button disabled - CSS color class*/
+    color: #c0c0c0;
+    background-color: #ffffff;
+    border: 2px solid grey;
+}
